--- a/app/index.html
+++ b/app/index.html
@@ -602,6 +602,73 @@
                 </ul>
             </div>
         </div>
+        <div class="blog">
+            <div class="container">
+                <h3 class="title"></h3>
+                <p class="text"></p>
+                <div class="blog__items">
+                    <div class="blog__item">
+                        <a class="blog__item-imglink" href="#">
+                            <img src="images/content/blog/1.png" alt="">
+                        </a>
+                        <div class="blog__item-box">
+                            <div class="blog__item-info">
+                                <a class="blog__item-author" href="#">By Admin</a>
+                                <div class="blog__item-date">10 January, 2020</div>
+                            </div>
+                            <a class="blog__item-titlelink" href="#">
+                                <h4 class="blog__item-title">
+                                    Our Apps User Use Mobile On His Mobile
+                                </h4>
+                            </a>
+                            <a class="blog__item-link" href="#">
+                                Read more
+                            </a>
+                        </div>
+                    </div>
+                    <div class="blog__item">
+
+                        <a class="blog__item-imglink" href="#">
+                            <img src="images/content/blog/1.png" alt="">
+                        </a>
+                        <div class="blog__item-box">
+                            <div class="blog__item-info">
+                                <a class="blog__item-author" href="#">By Admin</a>
+                                <div class="blog__item-date">10 January, 2020</div>
+                            </div>
+                            <a class="blog__item-titlelink" href="#">
+                                <h4 class="blog__item-title">
+                                    Our Apps User Use Mobile On His Mobile
+                                </h4>
+                            </a>
+                            <a class="blog__item-link" href="#">
+                                Read more
+                            </a>
+                        </div>
+                    </div>
+                    <div class="blog__item">
+
+                        <a class="blog__item-imglink" href="#">
+                            <img src="images/content/blog/1.png" alt="">
+                        </a>
+                        <div class="blog__item-box">
+                            <div class="blog__item-info">
+                                <a class="blog__item-author" href="#">By Admin</a>
+                                <div class="blog__item-date">10 January, 2020</div>
+                            </div>
+                            <a class="blog__item-titlelink" href="#">
+                                <h4 class="blog__item-title">
+                                    Our Apps User Use Mobile On His Mobile
+                                </h4>
+                            </a>
+                            <a class="blog__item-link" href="#">
+                                Read more
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
