--- a/app/page.html
+++ b/app/page.html
@@ -60,7 +60,27 @@
     </header>
 
     <main class="main">
-        
+        <div class="top">
+            <div class="top__container" style="background-image: url('./images/top-bg.png');">
+                <div class="container">
+                    <h2 class="top__title title">log in</h2>
+                    <div class="breadcrumbs">
+                        <ul class="breadcrumbs__list">
+                            <li class="breadcrumbs__item">
+                                <a class="breadcrumbs__link" href="#">
+                                    Home
+                                </a>
+                            </li>
+                            <li class="breadcrumbs__item">
+                                <a class="breadcrumbs__link" href="#">
+                                    Log in
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
