added comments blog in product page

--- a/app/product.html
+++ b/app/product.html
@@ -285,10 +285,76 @@
                     </div>
                 </div>
                 <div class="product-tabs">
+                    <div class="product-tabs__top">
+                        <a class="product-tabs__top-item" href="#tab-1">Description</a>
+                        <a class="product-tabs__top-item" href="#tab-2">Additional information</a>
+                        <a class="product-tabs__top-item product-tabs__top-item--active" href="#tab-3">Reviews</a>
+                    </div>
+                    <div class="product-tabs__content">
+                        <div class="product-tabs__content-item" id="tab-1">1</div>
+                        <div class="product-tabs__content-item" id="tab-2">2</div>
+                        <div class="product-tabs__content-item product-tabs__content-item--active" id="tab-3">
+                            <div class="comments">
+                                <img class="comments__img" src="images/content/avatar/1.png" alt="">
+                                <div class="comments__content">
+                                    <div class="comments__content-top">
+                                        <p class="comments__content-name">Micheal John</p>
+                                        <p class="comments__content-date">3 days ago</p>
+                                        <div class="comments__content-star" data-rateyo-rating="4"></div>
+                                    </div>
+                                    <p class="comments__content-text">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam porro nemo
+                                        quos debitis culpa dolorem molestias, repellat aperiam ducimus. Eaque corporis
+                                        ut voluptates ex repellendus temporibus distinctio labore fugit quod?
+                                        Dolorum sapiente quo ullam eius amet quidem culpa, adipisci voluptate eos
+                                        reiciendis assumenda sunt ea repellendus in eligendi dolore corporis laudantium
+                                        ratione magnam sed molestias quas at. Harum, pariatur porro?
+                                    </p>
+                                    <a class="comments__content-reply" href="#">Reply</a>
+                                </div>
+                            </div>
 
-                </div>
-                <div class="product-reviews">
+                            <div class="comments">
+                                <img class="comments__img" src="images/content/avatar/1.png" alt="">
+                                <div class="comments__content">
+                                    <div class="comments__content-top">
+                                        <p class="comments__content-name">Micheal John</p>
+                                        <p class="comments__content-date">3 days ago</p>
+                                        <div class="comments__content-star" data-rateyo-rating="4"></div>
+                                    </div>
+                                    <p class="comments__content-text">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam porro nemo
+                                        quos debitis culpa dolorem molestias, repellat aperiam ducimus. Eaque corporis
+                                        ut voluptates ex repellendus temporibus distinctio labore fugit quod?
+                                        Dolorum sapiente quo ullam eius amet quidem culpa, adipisci voluptate eos
+                                        reiciendis assumenda sunt ea repellendus in eligendi dolore corporis laudantium
+                                        ratione magnam sed molestias quas at. Harum, pariatur porro?
+                                    </p>
+                                    <a class="comments__content-reply" href="#">Reply</a>
+                                </div>
+                            </div>
 
+                            <div class="comments">
+                                <img class="comments__img" src="images/content/avatar/1.png" alt="">
+                                <div class="comments__content">
+                                    <div class="comments__content-top">
+                                        <p class="comments__content-name">Micheal John</p>
+                                        <p class="comments__content-date">3 days ago</p>
+                                        <div class="comments__content-star" data-rateyo-rating="4"></div>
+                                    </div>
+                                    <p class="comments__content-text">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam porro nemo
+                                        quos debitis culpa dolorem molestias, repellat aperiam ducimus. Eaque corporis
+                                        ut voluptates ex repellendus temporibus distinctio labore fugit quod?
+                                        Dolorum sapiente quo ullam eius amet quidem culpa, adipisci voluptate eos
+                                        reiciendis assumenda sunt ea repellendus in eligendi dolore corporis laudantium
+                                        ratione magnam sed molestias quas at. Harum, pariatur porro?
+                                    </p>
+                                    <a class="comments__content-reply" href="#">Reply</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
