--- a/app/product.html
+++ b/app/product.html
@@ -353,6 +353,136 @@
                                     <a class="comments__content-reply" href="#">Reply</a>
                                 </div>
                             </div>
+                            <form class="comments-form__ action=" #">
+                                <p class="comments-form__title">
+                                    Add Your Review
+                                </p>
+                                <div class="comments-form__rating">
+                                    <span class="comments-form__rating-title">Your Rating</span>
+                                    <label class="comments-form__label">
+                                        <input class="comments-form__input" type="radio" name="star">
+                                        <span class="comments-form__radio">
+                                            <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
+                                                    />
+                                            </svg>
+                                        </span>
+                                    </label>
+                                    <label class="comments-form__label">
+                                        <input class="comments-form__input" type="radio" name="star">
+                                        <span class="comments-form__radio">
+                                            <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
+                                                     />
+                                            </svg>
+                                            <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
+                                                     />
+                                            </svg>
+                                        </span>
+                                    </label>
+                                    <label class="comments-form__label">
+                                        <input class="comments-form__input" type="radio" name="star">
+                                        <span class="comments-form__radio">
+                                            <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
+                                                    />
+                                            </svg>
+                                            <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
+                                                     />
+                                            </svg>
+                                            <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
+                                                     />
+                                            </svg>
+                                        </span>
+                                    </label>
+                                    <label class="comments-form__label">
+                                        <input class="comments-form__input" type="radio" name="star">
+                                        <span class="comments-form__radio">
+                                            <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
+                                                     />
+                                            </svg>
+                                            <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
+                                                     />
+                                            </svg>
+                                            <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
+                                                    />
+                                            </svg>
+                                            <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
+                                                     />
+                                            </svg>
+                                        </span>
+                                    </label>
+                                    <label class="comments-form__label">
+                                        <input class="comments-form__input" type="radio" name="star" checked>
+                                        <span class="comments-form__radio">
+                                            <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
+                                                     />
+                                            </svg>
+                                            <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
+                                                     />
+                                            </svg>
+                                            <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
+                                                     />
+                                            </svg>
+                                            <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
+                                                     />
+                                            </svg>
+                                            <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
+                                                    />
+                                            </svg>
+                                        </span>
+                                    </label>
+                                </div>
+                                <div class="comments-form__box-input">
+                                    <input class="comments-form__text-input" placeholder="Your name" type="text">
+                                    <input class="comments-form__text-input" placeholder="Email address" type="text">
+                                </div>
+                                <textarea class="comments-form__textarea" placeholder="Your text here">
+                                </textarea>
+                                <button class="comments-form__btn" type="submit">Leave Review</button>
+                            </form>
                         </div>
                     </div>
                 </div>
