--- a/app/product.html
+++ b/app/product.html
@@ -365,8 +365,7 @@
                                             <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
-                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
-                                                    />
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z" />
                                             </svg>
                                         </span>
                                     </label>
@@ -376,14 +375,12 @@
                                             <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
-                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
-                                                     />
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z" />
                                             </svg>
                                             <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
-                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
-                                                     />
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z" />
                                             </svg>
                                         </span>
                                     </label>
@@ -393,20 +390,17 @@
                                             <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
-                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
-                                                    />
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z" />
                                             </svg>
                                             <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
-                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
-                                                     />
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z" />
                                             </svg>
                                             <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
-                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
-                                                     />
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z" />
                                             </svg>
                                         </span>
                                     </label>
@@ -416,26 +410,22 @@
                                             <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
-                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
-                                                     />
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z" />
                                             </svg>
                                             <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
-                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
-                                                     />
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z" />
                                             </svg>
                                             <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
-                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
-                                                    />
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z" />
                                             </svg>
                                             <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
-                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
-                                                     />
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z" />
                                             </svg>
                                         </span>
                                     </label>
@@ -445,32 +435,27 @@
                                             <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
-                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
-                                                     />
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z" />
                                             </svg>
                                             <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
-                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
-                                                     />
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z" />
                                             </svg>
                                             <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
-                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
-                                                     />
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z" />
                                             </svg>
                                             <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
-                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
-                                                     />
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z" />
                                             </svg>
                                             <svg width="16" height="26" viewBox="0 0 6 6" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
-                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z"
-                                                    />
+                                                    d="M1.33333 4L0 2L2 1.66667L3 0L4 1.66667L6 2.33333L4.66667 3.66667L5 6L3 5L1 6L1.33333 4Z" />
                                             </svg>
                                         </span>
                                     </label>
@@ -483,6 +468,60 @@
                                 </textarea>
                                 <button class="comments-form__btn" type="submit">Leave Review</button>
                             </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="related">
+            <div class="container">
+                <h3 class="title related__title">RELATED PRODUCTS</h3>
+                <div class="related__items">
+                    <div class="product-item">
+                        <div class="product-item__img-box">
+                            <img class="product-item__images" src="images/content/product/product-1.png" alt="">
+                        </div>
+                        <div class="star" data-rateyo-rating="4"></div>
+                        <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                        <div class="product-item__price">
+                            <div class="product-item__new-price">$34.00</div>
+                            <div class="product-item__old-price">$36.00</div>
+                        </div>
+                    </div>
+
+                    <div class="product-item">
+                        <div class="product-item__img-box">
+                            <img class="product-item__images" src="images/content/product/product-1.png" alt="">
+                        </div>
+                        <div class="star" data-rateyo-rating="4"></div>
+                        <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                        <div class="product-item__price">
+                            <div class="product-item__new-price">$34.00</div>
+                            <div class="product-item__old-price">$36.00</div>
+                        </div>
+                    </div>
+
+                    <div class="product-item">
+                        <div class="product-item__img-box">
+                            <img class="product-item__images" src="images/content/product/product-1.png" alt="">
+                        </div>
+                        <div class="star" data-rateyo-rating="4"></div>
+                        <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                        <div class="product-item__price">
+                            <div class="product-item__new-price">$34.00</div>
+                            <div class="product-item__old-price">$36.00</div>
+                        </div>
+                    </div>
+
+                    <div class="product-item">
+                        <div class="product-item__img-box">
+                            <img class="product-item__images" src="images/content/product/product-1.png" alt="">
+                        </div>
+                        <div class="star" data-rateyo-rating="4"></div>
+                        <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                        <div class="product-item__price">
+                            <div class="product-item__new-price">$34.00</div>
+                            <div class="product-item__old-price">$36.00</div>
                         </div>
                     </div>
                 </div>
