--- a/app/index.html
+++ b/app/index.html
@@ -612,9 +612,9 @@
                             <img src="images/content/blog/1.png" alt="">
                         </a>
                         <div class="blog__item-box">
-                            <div class="blog__item-info">
-                                <a class="blog__item-author" href="#">By Admin</a>
-                                <div class="blog__item-date">10 January, 2020</div>
+                            <div class="blog-box">
+                                <a class="blog-box__author" href="#">By admin</a>
+                                <div class="blog-box__date">3 days ago</div>
                             </div>
                             <a class="blog__item-titlelink" href="#">
                                 <h4 class="blog__item-title">
@@ -632,9 +632,9 @@
                             <img src="images/content/blog/1.png" alt="">
                         </a>
                         <div class="blog__item-box">
-                            <div class="blog__item-info">
-                                <a class="blog__item-author" href="#">By Admin</a>
-                                <div class="blog__item-date">10 January, 2020</div>
+                            <div class="blog-box">
+                                <a class="blog-box__author" href="#">By admin</a>
+                                <div class="blog-box__date">3 days ago</div>
                             </div>
                             <a class="blog__item-titlelink" href="#">
                                 <h4 class="blog__item-title">
@@ -652,9 +652,9 @@
                             <img src="images/content/blog/1.png" alt="">
                         </a>
                         <div class="blog__item-box">
-                            <div class="blog__item-info">
-                                <a class="blog__item-author" href="#">By Admin</a>
-                                <div class="blog__item-date">10 January, 2020</div>
+                            <div class="blog-box">
+                                <a class="blog-box__author" href="#">By admin</a>
+                                <div class="blog-box__date">3 days ago</div>
                             </div>
                             <a class="blog__item-titlelink" href="#">
                                 <h4 class="blog__item-title">
