--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <a class="logo" href="#">
+                <a class="logo" href="index.html">
                     <img src="images/logo.png" alt="">
                 </a>
                 <nav class="menu">
@@ -28,19 +28,19 @@
                     
                     <ul class="menu__list">
                         <li class="menu__list-item">
-                            <a class="menu__list-link menu__list-link--active" href="#">home</a>
+                            <a class="menu__list-link menu__list-link--active" href="index.html">home</a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#">shop</a>
+                            <a class="menu__list-link" href="shop.html">shop</a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#">page</a>
+                            <a class="menu__list-link" href="page.html">page</a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#">blog</a>
+                            <a class="menu__list-link" href="blog.html">blog</a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#">contact</a>
+                            <a class="menu__list-link" href="contacts.html">contact</a>
                         </li>
                     </ul>
                 </nav>
